--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
-      
+        env:
+          SONAR_TOKEN: c8628af1307d5e87bc3836a34ee8d529ef19ed1e
